--- a/rest-api/pom.xml
+++ b/rest-api/pom.xml
@@ -16,6 +16,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+    <jersey2.version>2.19</jersey2.version>
+    <jaxrs.version>2.0.1</jaxrs.version>
   </properties>
 
   <dependencies>
@@ -26,13 +28,15 @@
 	  <version>0.0.1-SNAPSHOT</version>
 	  <type>jar</type>
     </dependency>
-  
+  	
+  	<!--  
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    -->
     
     <dependency>
        <groupId>javax.servlet</groupId>
@@ -40,6 +44,34 @@
        <version>3.1.0</version>
 	</dependency>
     
+  	<!-- JAX-RS -->
+      
+    <dependency>
+        <groupId>javax.ws.rs</groupId>
+        <artifactId>javax.ws.rs-api</artifactId>
+        <version>${jaxrs.version}</version>
+    </dependency>
+    
+    <!-- Jersey 2.19 -->
+    
+    <dependency>
+        <groupId>org.glassfish.jersey.containers</groupId>
+        <artifactId>jersey-container-servlet</artifactId>
+        <version>${jersey2.version}</version>
+    </dependency>
+    
+    <dependency>
+        <groupId>org.glassfish.jersey.core</groupId>
+        <artifactId>jersey-server</artifactId>
+        <version>${jersey2.version}</version>
+    </dependency>
+    
+    <dependency>
+        <groupId>org.glassfish.jersey.core</groupId>
+        <artifactId>jersey-client</artifactId>
+        <version>${jersey2.version}</version>
+    </dependency>
+      
   </dependencies>
 
   <build>
@@ -47,8 +79,8 @@
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
-          <artifactId>maven-war-plugin</artifactId>
-          <version>3.2.0</version>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.7.0</version>
         </plugin>
       </plugins>
     </pluginManagement>
